--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,60 @@
-/* You can add global styles to this file, and also import other style files */
+@charset "UTF-8";
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: #4abdac;
+}
+
+body {
+  background-color: #4abdac;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  min-height: 100%;
+  color: #f7b733;
+}
+app-root{
+  display: flex;
+  flex-flow: row nowrap;
+  height: 100%;
+  width: 100%;
+}
+app-about{
+  flex: 5;
+  height: 100%;
+  padding: 1em;
+  color: #fc4a1a;
+}
+app-contact{
+  flex: 5;
+  height: 100%;
+  padding: 1em;
+  color: #fc4a1a;
+}
+app-interests{
+  flex: 5;
+  height: 100%;
+  padding: 1em;
+  color: #fc4a1a;
+}
+app-experience{
+  flex: 5;
+  height: 100%;
+  padding: 1em;
+  color: #fc4a1a;
+}
+
+app-skills{
+  flex: 5;
+  height: 100%;
+  padding: 1em;
+  color: #fc4a1a;
+}
