--- a/src/app/my-aside/my-aside.component.html
+++ b/src/app/my-aside/my-aside.component.html
@@ -1,10 +1,13 @@
 <aside>
-  <img src="http://www.thehindu.com/sci-tech/technology/internet/article17759222.ece/alternates/FREE_660/02th-egg-person" alt="profilePicture" />
-  <h1>Mr. Nobody</h1>
+  <!-- src="http://www.thehindu.com/sci-tech/technology/internet/article17759222.ece/alternates/FREE_660/02th-egg-person"   -->
+  <a routerLink="/about" routerLinkActive="active">
+    <img src="assets/profile.png" alt="profilePicture" />
+    <h1>Pau de la Cuesta</h1>
+  </a>
   <ul>
-    <li><span class="email-icon"></span>your@email.cat</li>
-    <li><span class="github-icon"></span><a href="http://github.com/user">@user</a></li>
-    <li><span class="linkedin-icon"></span><a href="http://linkedin.com/user">@user</a></li>
+    <li>paudelacuesta@ciclion.com</li>
+    <li><span class="github-icon"></span><a href="http://github.com/pcs289">@pcs289</a></li>
+    <li><span class="linkedin-icon"></span><a href="http://linkedin.com/in/pau-de-la-cuesta-sala-a761a179">Pau de la Cuesta</a></li>
   </ul>
-  <button href="">Download CV!</button>
+  <a href="assets/cv.pdf"><button>Download CV!</button></a>
 </aside>
