ADD Styles: New fonts and colors

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <section>
   <h1>About Me</h1>
-  <h3>Hello!</h3>
+  <h3>Hello</h3>
   <p>My name is Pau de la Cuesta from Barcelona.<br> I'm 21 years old and I'm a Telecommunications Engineer Student at UPC(Universitat Politècnica de Catalunya).</p>
   <p>My journey as a developer starts on 2012 when I got first interested in Web Development Technologies. Then, I dived into the iOS Development world learning fundamentals with Obj-C (including a regulated 40h course) and then migrating to Swift.</p>
   <p>I've worked many times as a System Administrator for different entities (see <a routerLink="/experience">Experience</a> section), basically on top of Linux operating systems. To support this roles I have taken several courses both at my university and online.</p>
