--- a/src/app/my-aside/my-aside.component.html
+++ b/src/app/my-aside/my-aside.component.html
@@ -9,5 +9,5 @@
     <li><span class="github-icon"></span><a href="http://github.com/pcs289">@pcs289</a></li>
     <li><span class="linkedin-icon"></span><a href="http://linkedin.com/in/pau-de-la-cuesta-sala-a761a179">Pau de la Cuesta</a></li>
   </ul>
-  <a href="assets/cv.pdf"><button>Download CV!</button></a>
+  <a download="assets/cv.pdf"><button>Download C V</button></a>
 </aside>
