--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,9 +1,29 @@
+@font-face {
+   font-family: 'Apple';
+   src: url('/assets/HomemadeApple.ttf');
+}
+@font-face {
+   font-family: 'Place';
+   src: url('/assets/HopelessPlace.ttf');
+}
+@font-face {
+   font-family: 'Type';
+   src: url('/assets/typewriter.ttf');
+}
 section{
   color: black;
 }
 h1,h3{
   margin: 0.5em;
 }
+h1{ font-family: Apple; }
+h3{ font-family: Place; }
 p{
+  text-align: justify;
   margin: 1em;
+  font-family: Type;
+}
+p a{
+  font-family: Type;
+  color: maroon;
 }
