--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+
 * {
   margin: 0;
   padding: 0;
@@ -10,16 +11,16 @@ html {
   height: 100%;
   width: 100%;
   overflow: hidden;
-  background-color: #4abdac;
+  background-color: #fff0db;
 }
 
 body {
-  background-color: #4abdac;
+  background-color: #fff0db;
   overflow: hidden;
   height: 100%;
   width: 100%;
   min-height: 100%;
-  color: #f7b733;
+  color: #fff0db;
 }
 app-root{
   display: flex;
