--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,6 +5,6 @@
   <input type="email" name="email" placeholder="Email" required><br>
   <input type="text" name="subject" placeholder="Subject" required><br>
   <textarea name="message" placeholder="Message" cols="50" rows="10" required></textarea><br>
-  <input type="submit" name="send" value="Send!">
+  <input type="submit" name="send" value="Send">
 </form>
 </section>
