--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -1,3 +1,27 @@
+@font-face {
+   font-family: 'Apple';
+   src: url('/assets/HomemadeApple.ttf');
+}
+@font-face {
+   font-family: 'Place';
+   src: url('/assets/HopelessPlace.ttf');
+}
+@font-face {
+   font-family: 'Type';
+   src: url('/assets/typewriter.ttf');
+}
 section{
-  color: black; 
+  color: black;
+}
+
+h1{
+  font-family: Type;
+  margin: 1em;
+  font-size: 2em;
+}
+
+p{
+  font-family: Apple;
+  padding: 1em;
+  text-align: justify;
 }
